<resources>
    <string name="app_name">Miam!</string>
    <string name="home_starter">Entrées</string>
    <string name="home_main_dish">Plats</string>
    <string name="home_dessert">Desserts</string>
    <string name="notRestaurant">Ce n\'est pas un restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cr_er_votre_compte">créer votre compte</string>
    <string name="prenom">prenom</string>
    <string name="adresse">adresse</string>
    <string name="mail">mail</string>
    <string name="mot">mot</string>
    <string name="creation_du_compte">creation du compte</string>
    <string name="nom">nom</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="quantity">Quantité : </string>
    <string name="login_failed">"Login failed"</string>
    <string name="validationBasket">valider la commande</string>
    <string name="basketPageTitle">votre panier</string>
    <string name="connecionTitlePage">se connecter</string>
    <string name="firstNameRegister">Prénom</string>
    <string name="AddressRegister">Adresse</string>
    <string name="emailRegister">Email</string>
    <string name="passwordRegister">Mot de passe</string>
    <string name="createAccountPageTitle">Créer un compte</string>
    <string name="createRegister">créer</string>
    <string name="askLogin">☞ vous n\'avez pas de compte ?</string>
    <string name="lastNameRegister">Nom</string>
    <string name="pictureItemDescription">item food picture</string>
    <string name="boutonPlusDescription">bouton plus</string>
    <string name="boutonMoinsDescription">bouton moins</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="askRegister">☞ vous avez déjà un compte ?</string>
    <string name="email">Email</string>
    <string name="deleteButtonDescription">supprimer un plat</string>
    <string name="imagePanierDescription">image panier</string>
</resources>